[package]
name = "nbd-rs"
version = "0.0.3"
authors = ["Furkan Mustafa <furkan@rainlab.co.jp>", "Bilal Ozdemir <bilal@rlab.io>"]
edition = "2018"

[dependencies]
libc = "0.2"
mmap-safe = "0.0.2"
clap = "2.33"
url = "2.2"
rust-s3 = { version = "0.28", features = ["blocking"] }
env_logger = "0.9"
log = "0.4"

